--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "author": "Marcos_yeyo <yeyomarcos@gmail.com>",
   "private": true,
   "scripts": {
+    "dev": "quasar dev",
+    "build": "quasar build",
+    "build:pwa": "quasar build -m pwa",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "pinia": "^2.0.11",
     "@quasar/extras": "^1.0.0",
+    "firebase": "^9.9.1",
+    "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
